--- a/index.html
+++ b/index.html
@@ -281,5 +281,6 @@
     
       <script src="js/main.js"></script>
       <script src="js/mobile.js"></script>
+      <script src="js/menu.js" ></script>
 </body>
 </html>
