--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" ></script>
@@ -70,7 +73,7 @@
     <!--Texto abertura-->
     <div class="texto-topo">
         <div class="interface">
-        <h1>Instituto Cultural <span>Lingua</span> <span>Solta</span> </h1>
+        <a href="" class="texto" ><h1>Instituto Cultural <span>Lingua</span> <span>Solta</span> </h1></a>
         <p>Fundado em 27 de fevereiro de 1995, o Grupo Teatral Língua Solta, posteriormente convertido em Associação Artística e Cultural Língua Solta e agora INSTITUTO ARTISTICO CULTURAL LINGUA SOLTA – IACLS vem mostrando ser possível associar cultura, arte e serviço social. Desde sua fundação em 08 de outubro do ano de 2009, o Centro Cultural Língua Solta tem prestado relevante serviço de formação cidadã no Município de Santana, protagonizando não somente a descoberta de novos talentos, mas contribuindo com a formação profissional de jovens e adolescentes, garantindo assim, suas inserções no mercado de trabalho.
         </p>
        </div>
