--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="">Serviços</a></li>
                     <li><a href="">Projetos</a></li>
-                    <li><a href="">Galeria</a></li>
+                    <li><a href="galeria.html">Galeria</a></li>
     
                 </ul>
             </nav>
